--- a/src/components/Avatar.module.css
+++ b/src/components/Avatar.module.css
@@ -1,27 +1,13 @@
-.author {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+ .avatar {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 8px;
 }
 
-.author img {
+.avatarWithBorder {
   width: calc(3rem + 12px);
   height: calc(3rem + 12px);
   border-radius: 8px;
   border: 4px solid var(--gray-800);
   outline: 2px solid var(--green-500);
 }
-
-.authorInfo strong { 
-  display: block;
-  color: var(--gray-100);
-  line-height: 1.6;
- }
- 
- .authorInfo span {
-   display: block;
-   font-size: 0.875rem;
-   color: var(--gray-400);
-   line-height: 1.6;
- }
- 
